--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
-<title>mít chú ơi cứu cháuu</title>
+<title>Video hot nhất lúc này</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
   /* === Loading spinner styles === */
@@ -280,7 +280,7 @@
   </button>
 </div>
 
-<h1 style="display:none;">🔥Hot tiktoker Mít kêu la chú ơi cứu cháu🔥</h1>
+<h1 style="display:none;">🔥Video hot nhất lúc này🔥</h1>
 
 <div id="main-content" style="display:none;">
   <div class="video-container" id="videoContainer">
@@ -396,4 +396,5 @@
 </script>
 
 </body>
+
 </html>
