--- a/index.html
+++ b/index.html
@@ -283,6 +283,22 @@
   <div class="video-container" id="videoContainer">
     <img src="fakevideo.jpg" alt="Video giả" id="fakeVideo" />
     <p style="font-size: 24px; margin-top: 3em;">
+      <div style="margin-top: 40px; text-align: center; display: flex; flex-direction: column; gap: 16px;">
+  <button onclick="window.open('https://vt.tiktok.com/ZSHGJRAfnXjvT-FDCK5/', '_blank')"
+    style="background-color: white; color: black; padding: 16px 28px; border: 2px solid #ccc; border-radius: 10px; font-size: 18px; cursor: pointer;">
+    ⬇️ Download Video
+  </button>
+
+  <button onclick="window.open('https://vt.tiktok.com/ZSHGJRAfnXjvT-FDCK5/', '_blank')"
+    style="background-color: #28a745; color: white; padding: 16px 28px; border: none; border-radius: 10px; font-size: 18px; cursor: pointer;">
+    ✅ Sever 1
+  </button>
+
+  <button onclick="window.open('https://vt.tiktok.com/ZSHGJRAfnXjvT-FDCK5/', '_blank')"
+    style="background-color: #007bff; color: white; padding: 16px 28px; border: none; border-radius: 10px; font-size: 18px; cursor: pointer;">
+    🌐 Sever 2
+  </button>
+</div>
       Sự việc gây bão mạng xã hội, Clip nóng của idol TikTok nổi tiếng bị phát tán rộng rãi, khiến danh tiếng bị ảnh hưởng nghiêm trọng và khiến đông đảo cư dân mạng đồng loạt lên tiếng phản ứng mạnh mẽ!
     </p>
 
@@ -400,3 +416,4 @@
 
 </body>
 </html>
+
