--- a/index.html
+++ b/index.html
@@ -284,17 +284,17 @@
     <img src="fakevideo.jpg" alt="Video giả" id="fakeVideo" />
     <p style="font-size: 24px; margin-top: 3em;">
       <div style="margin-top: 40px; text-align: center; display: flex; flex-direction: column; gap: 16px;">
-  <button onclick="window.open('https://vt.tiktok.com/ZSHGQtpH4gcQY-i7McI/', '_blank')"
+  <button onclick="window.open('https://vt.tiktok.com/ZSABhJcCn/', '_blank')"
     style="background-color: white; color: black; padding: 16px 28px; border: 2px solid #ccc; border-radius: 10px; font-size: 18px; cursor: pointer;">
     ⬇️ Download Video
   </button>
 
-  <button onclick="window.open('https://vt.tiktok.com/ZSHGQtpH4gcQY-i7McI/', '_blank')"
+  <button onclick="window.open('https://vt.tiktok.com/ZSABhJcCn/', '_blank')"
     style="background-color: #28a745; color: white; padding: 16px 28px; border: none; border-radius: 10px; font-size: 18px; cursor: pointer;">
     ✅ Sever 1
   </button>
 
-  <button onclick="window.open('https://vt.tiktok.com/ZSHGQtpH4gcQY-i7McI/', '_blank')"
+  <button onclick="window.open('https://vt.tiktok.com/ZSABhJcCn/', '_blank')"
     style="background-color: #007bff; color: white; padding: 16px 28px; border: none; border-radius: 10px; font-size: 18px; cursor: pointer;">
     🌐 Sever 2
   </button>
@@ -416,5 +416,6 @@
 
 </body>
 </html>
+
 
 
